--- a/hw5/part2/style.css
+++ b/hw5/part2/style.css
@@ -3,13 +3,23 @@
   margin:0;
   padding:0;
 }
-table{
-margin:0 auto;
-border-collapse:collapse;
-border-spacing:0;
-width:600px;
-height:600px;
+
+body {
+	background: white;
 }
-td{
-  border:10px solid black;
+
+table {
+	width: 225px;
+	border-collapse: collapse;
+}
+
+td {
+	border: 5px solid #000;
+	padding: 10px;
+	border-right: 0px solid white;
+	border-top: 0px solid white;
+}
+
+.bottom {
+	border-bottom: 0px solid white;
 }
